# ML-Odds

./: .env.example  .gitignore  README.md  README.md.bak  jest.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/odds/: route.ts
app/api/predictions/: route.ts
app/api/scores/: route.ts
app/game/[gameId]/: page.tsx
app/odds/: page.tsx
app/player/[playerId]/: page.tsx
app/schedule/: page.tsx
app/scores/: page.tsx
app/standings/: page.tsx
app/stats/player-stats/: page.tsx
components/: BoxScore.tsx  DatePicker.tsx  ErrorState.tsx  GameCard.tsx  GameCenter.tsx  LiveHeadlines.tsx  LoadingSpinner.tsx  NHLTickerTape.tsx  OddsPanel.tsx  OddsTable.tsx  PlayerStatsClient.tsx  PlayerStatsTabs.tsx  PredictionsPanel.tsx  ScoreboardStrip.tsx  StandingsClient.tsx  StandingsWidget.tsx  TopEdges.tsx
data/: team_ratings.json
lib/: best-lines.ts  cache.ts  espn-nhl.ts  nhl-api.ts  odds-api.ts  predictions.ts  types.ts  utils.ts
lib/__tests__/: best-lines.test.ts  espn-nhl.test.ts
ml_odds/: __init__.py
ml_odds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml_odds/backtest/: framework.py
ml_odds/betting/: __init__.py  edge.py  kelly.py
ml_odds/data/: ingestion.py  storage.py
ml_odds/features/: engineering.py
ml_odds/models/: __init__.py  trainer.py
ml_odds/serving/: __init__.py  pipeline.py
tests/: __init__.py  test_backtest.py  test_betting.py  test_features.py  test_model.py
(+10 files in other folders)
